curriculum/css/estilos.css
@font-face {
  font-family: 'icomoon';
  src:  url('../fonts/icomoon.eot?rvphlo');
  src:  url('../fonts/icomoon.eot?rvphlo#iefix') format('embedded-opentype'),
    url('../fonts/icomoon.ttf?rvphlo') format('truetype'),
    url('../fonts/icomoon.woff?rvphlo') format('woff'),
    url('../fonts/icomoon.svg?rvphlo#icomoon') format('svg');
  font-weight: normal;
  font-style: normal;
  font-display: block;
}

[class^="icon-"], [class*=" icon-"] {
  /* use !important to prevent issues with browser extensions that change fonts */
  font-family: 'icomoon' !important;
  speak: never;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;

  /* Better Font Rendering =========== */
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.icon-menu:before {
  content: "\e9bd";
}



body {
  font-family: 'Source Sans Pro', sans-serif;
  margin: 0;
}

figure {
  margin: 0;
}


ol,
ul {
  margin: 0;
  padding: 0;
  list-style: none;
}


h1,
h2,
h3,
h4,
h5,
h6{
  font-family: 'Fjalla one', sans-serif;
  font-weight: normal;
}

h1 {
  font-size: 40px;
  line-height: 1.5;
  letter-spacing: -.2px;
  color: white;
  margin: 0;
}

h1 strong { 
  color:  #026fff;
}

h2 {
  color: #026fff;
  text-transform: uppercase;
  font-weight: bold;
  font-family: 'Source Sans Pro', sans-serif;
  font-size: 24px;
  margin-bottom: 40px;
}

.hero {
  height: 300px;
  background-color: #1b2127;
  /*background-image: url('../imagenes/hero.jpg');
   background-size: 500px 300px;
  background-repeat: no-repeat;
  background-position-x: right;*/
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-wrap: wrap;

}

.hero-image{
  object-fit: cover;


}

.portfolio {
  background: #fafafa;
  padding: 20px;
  text-transform: ;

}

.project {
  display: flex;
  border: 1px solid gray;
  border-radius: 10px;
  margin-bottom: 15px;
  padding: 20px;
  background: white;
  align-items: center;
  justify-content: space-between;
  flex-wrap: wrap;
}

.project-course,
.project-date,
.project-url {
  margin: 10px 0;
}

.project-description {
  font-size: 20px;
}

.project strong {
  font-family: 'Fjalla one', sans-serif;
}
/*.project-date {
  margin: 10px 0;
}
*/

.project-title {
  font-size: 30px;
  margin-top: 0;
  margin-bottom:  10px;
}

.project-details {
  width: 50%;
}

.project-imageContainer {
  width: 50%;
}

.header {
  background-color: #1b2127;
  color: white;
  display: flex;
  justify-content: space-between;
  height: 70px;
  align-items: center;
  flex-wrap: wrap;
}

.menu {
  height: inherit;
}

.header ol {
  display: flex;
  height: inherit;
}

.header ol li {
  height: inherit;
}

.header a {
  color: white;
  text-decoration: none;
  height: inherit;
  display: flex;
  align-items: center;
  padding: 0 10px;
}

.footer {
  color: white;
  background-color: #1b2127;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-wrap: wrap;
}

.footer img {
  vertical-align: middle;
}

.footer a {
  color: white;
}

.event-list{
  display: flex;
  flex-wrap: wrap;
}

.event-list-title{
  margin-left: 20px;
}

.event {
  margin: 1%;
  width: 48%;
  border-radius: 10px;
  overflow: hidden;
  flex-shrink: 0;
  background: #f4fbff;
}

.event img {
  width: 480px;
  height: 200px;
  object-fit: cover;
}

.event-detail {
  margin: 20px 40px;
  margin-top: -40px;
  background-color: white;
  position: relative;
  padding: 20px;
  text-align: center;
}

.event-description {
  text-align: left;
}

.event-url {
  color: #056fff;
  border: 1px solid;
  padding: 5px 20px;
  text-decoration: none;
  border-radius: 5px;

}

.contact {
  background-color: #056fff;
  color: white;
  height: 150px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-wrap: wrap;
}



.social {
 
}

.social-link {
  display: inline-block;
  width: 50px;
  height: 50px;
  background-size: 50px 50px;
  margin: 0 10px;
}

.social-link.twitter {
  background-image: url(../imagenes/twitter.svg);
  
}
.social-link.facebook {
  background-image: url(../imagenes/facebook.svg);
  
}
.social-link.github {
  background-image: url(../imagenes/github.svg);
  
}
.social-link.instagram {
  background-image: url(../imagenes/instagram.svg);
  
}

.form-email input{
  border-color: gray;
  border-style: solid;
  padding: 10px 20px 10px 25px;
  background-image: url('../imagenes/envelope.svg');
  background-size: 15px 15px;
  background-repeat: no-repeat;
  background-position-y: center;
  background-position-x: 5px;
}

.form-email button {
  border: 1px solid white;
  display: block;
  background: transparent;
  color: white;
  padding: 10px 0px;
  border-radius: 5px;
  width: 100px;
  margin-top: 10px;
}

.form-email h3 {
  font-family: 'Source Sans Pro', sans-serif;
}

.container {
  max-width: 1000px;
  flex: 1;
  margin: 0 auto;
  display: inherit;
  justify-content: inherit;
  align-items: inherit;
  height: inherit;
  flex-wrap: inherit;
}

.burguer-button {
  width: 40px;
  height: 40px;
  /* font-size: 40px; */
  border-radius: 50%;
  background-color: black;
  display: block;
}

@media screen and (max-width: 1024px){
  .container {
    padding: 0 1em;
  }

  .hero {
    height: auto;
    position: relative;
    overflow: hidden;
    padding: 2em;

  }

  .hero-image{
    position: absolute;
    z-index: 1;
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
    width: 100%;
  }
  h1 {
    font-size: 2em;
    z-index: 2;
  }

  .html-video {
    width: 100%;
    height: auto;
  }

  .youtube-video {
    /* width: 100%;
    height: auto; */
    position: absolute;
    top: 0;
    bottom: 0;
    right: 0;
    left: 0;
    width: 100%;
    height: 100%;
  }
 
  

  .flexible-video {
    width: 100%;
    height: 0;
    padding-top: 56.25%;
    background: blue;
    position: relative;
  }
}
@media screen and (max-width: 767px){
  
  
  .header {
    display: block;
    height: auto;
  }
  
  .header ol {
    display: block;
  }

  .header ol li {
    height: 50px;
  }

  .header a {
    justify-content: center;
  }

  .header .logo {
    text-align: center;
  }

  .project {display: block;}

  .project-imageContainer {
    width: auto;
    text-align: center;
  }

  .project-imageContainer img {
    max-width: 100%;
  }

  .project-details {
    width: auto;
    font-size: 16px;
  }

  .project-course, .project-date, .project-url{
    margin: .4em 0;
  }

  .project-title{
    font-size: 1.5em;
    margin-bottom: .3em;
  }

  .project-url{
    font-size: 1em;
  }

  .project-course{
    font-size: .7em;
  }

  .project-date{
    font-size: 1em;

  }
  .project-description{
    font-size: .8em;
  }

  .event {
    width: auto;
    flex-shrink: initial;
  }

  .event img {
    width: 100%;
    max-height: 250px;
    object-position: 25% 25%;
  }
}
@media screen and (max-width: 480px){
  h1 {
    font-size: 1.5em;
  }
  
  .project-details {
    font-size: 16px;
  }

  .event-detail {
    margin: -2em .5em .5em;
    padding: 1em;
  }
  
  .contact {
    height: auto;
    padding: 1.5em 0;
    text-align: center;
    display: block;
  }

  .form-email button {
    margin: 1em auto;
  }

  .form-email h3 {
    margin-top: 0;
  }

  .footer {
    display: block;
    text-align: center;
    border: 1px solid transparent;
  }
}
@media screen and (max-width: 320px){
  h1 {
    font-size: 1.2em;
    
  }

  .hero {
    padding: 2em 1em;
  }
}

